add swagger specification & some tests
